# recall-trading-agent

./: .gitignore  FIXES.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  agent.py  config.py  main.py  pyproject.toml  railway.toml  risk.py
backend/.ruff_cache/0.15.4/: 5188153719251904138  7068396696534953912
backend/app/: agent.py  config.py  main.py  recall_client.py  risk.py
backend/app/strategy/: __init__.py  base.py  mean_revert.py  momentum.py  sentiment.py
backend/strategies/: __init__.py  mean_reversion.py  momentum.py  recall_optimizer.py  sentiment.py
backend/tests/: test_risk.py  test_strategies.py
frontend/: package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: SignalBadge.tsx  StatCard.tsx
frontend/lib/: api.ts
frontend/src/app/: globals.css  layout.tsx
