[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall-trading-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6"]

[tool.ruff]
target-version = "py311"

[tool.uv]
dev-dependencies = ["ruff>=0.6"]
